--- a/templates/post_anonymous.html
+++ b/templates/post_anonymous.html
@@ -1,30 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>匿名曙光留言板 | 匿名留言</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/static/css/style.css" />
 </head>
+
 <body>
-<div class="navbar">
-  <a href="/"><img src="/static/img/logo.png" alt="SGGS logo" >
-  <h1>匿名留言板</h1></a>
-</div>
+    <div class="navbar">
+        <a href="/"><img src="/static/img/logo.png" alt="SGGS logo">
+            <h1>匿名留言板</h1>
+        </a>
+    </div>
 
-<div id="post_anonymous_warning">
-    <p>
-        你正在以匿名的方式留言，請注意你的言論！<br>
-        在匿名留言之前，請先閱讀<a href="/policy">條款</a>。<br>
-        若您已登入，您可以使用"匿名"的身分回復留言。
-    </p>
-</div>
+    <div id="post_anonymous_warning">
+        <p>
+            你正在以匿名的方式留言，請注意你的言論！<br>
+            在匿名留言之前，請先閱讀<a href="/policy">條款</a>。<br>
+            若您已登入，您可以使用"匿名"的身分回復留言。
+        </p>
+    </div>
 
-<div id="mb_form">
-    <form method="POST">
-        <table>
-            <tr><td>留言：</td><td><textarea id="content" name="content" placeholder="請輸入留言內容" required></textarea></td></tr>
-            <tr><td></td><td><button type="submit">送出</button></td></tr>
-        </table>
-    </form>
-</div>
+    <div id="mb_form">
+        <form method="POST">
+            <table>
+                <tr>
+                    <td>留言：</td>
+                    <td><textarea id="content" name="content" placeholder="請輸入留言內容" required></textarea></td>
+                </tr>
+                <tr>
+                    <td></td>
+                    <td><button type="submit">送出</button></td>
+                </tr>
+            </table>
+        </form>
+    </div>
