let reply page's title have post's content init root page

--- a/templates/replys.html
+++ b/templates/replys.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>匿名曙光留言板</title>
+    <title>{{ title }} || 匿名曙光留言板</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/static/css/style.css" />
