--- a/templates/policy.html
+++ b/templates/policy.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>匿名曙光留言板 | Policy</title>
+    <title>匿名曙光留言板 | 條款</title>
     <link rel="stylesheet" href="/static/css/style.css" />
 </head>
 
