--- a/templates/message_board.html
+++ b/templates/message_board.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="navbar">
-        <a href="/"><img src="/static/img/logo.png" alt="SGGS logo">
+        <a href="/message_board"><img src="/static/img/logo.png" alt="SGGS logo">
             <h1>匿名留言板</h1>
         </a>
     </div>
