--- a/templates/replys.html
+++ b/templates/replys.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8" />
     <link rel="stylesheet" href="/static/css/style.css" />
+    <meta property="og:title" content="{{ title }} || 匿名曙光留言板" />
+    <meta property="og:image" content="/opengraph?post_id={{ post_id }}" />
 </head>
 
 <body>
@@ -60,7 +62,7 @@
     {% if session.get("user_info") %}
     <div id="mb_form">
         <form method="POST">
-            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
             <table>
                 <tr>
                     <td>回覆：</td>
