--- a/templates/replys.html
+++ b/templates/replys.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/static/css/style.css" />
     <meta property="og:title" content="{{ title }} || 匿名曙光留言板" />
     <meta property="og:image" content="/opengraph?post_id={{ post_id }}" />
+    <link type="application/json+oembed" href="https://{{ request.host }}/oembedapi?post_id={{ post_id }}" />
 </head>
 
 <body>
