--- a/templates/message_board.html
+++ b/templates/message_board.html
@@ -46,7 +46,7 @@
                     <br><br>
                     <span class="pub_time">{{ m[1] }}</span>
                 </div>
-                {% autoescape false %} <p class="content">{{ m[2] }}</p>{% endautoescape %}
+                {% autoescape false %} <div class="content">{{ m[2] }}</div>{% endautoescape %}
                 <p class="reply">回覆數:{{ m[4] }}</p>
                 {% if m[5] %}
                 <p class="reply">管理員:此留言有部分可能具有爭議</p>
