--- a/static/css/style.css
+++ b/static/css/style.css
@@ -168,7 +168,8 @@ hr {
 }
 
 .message .content {
-    margin-top: 10px;
+    /* margin-top: 10px; */
+    margin-bottom: 0px;
     bottom: 12px;
     font-family: 'Inter', sans-serif;
     color: #ffffff;
