--- a/templates/replys.html
+++ b/templates/replys.html
@@ -25,7 +25,7 @@
             <span class="pub_time">{{ m[1] }}</span>
         </div>
         {% autoescape false %}
-        <p class="content">{{ m[2] }}</p>
+        <div class="content">{{ m[2] }}</div>
         {% endautoescape %}
         {% if m[3] %}
         <p class="reply">管理員:此留言有部分可能具有爭議</p>
@@ -49,7 +49,7 @@
             <span class="pub_time">{{ m[1] }}</span>
         </div>
         {% autoescape false %}
-        <p class="content">{{ m[2] }}</p>
+        <div class="content">{{ m[2] }}</div>
         {% endautoescape %}
         {% if m[3] %}
         <p class="reply">管理員:此留言有部分可能具有爭議</p>
