--- a/static/css/style.css
+++ b/static/css/style.css
@@ -187,18 +187,49 @@ hr {
     color: #afafaf;
 }
 
-.message .content img{
-    max-width: 100%;
-    max-height: 100%;
-    border-radius: 57px;
+
+@media screen and (max-width: 800px) {
+    .message .content img{
+        max-width: 100%;
+        max-height: 100%;
+        border-radius: 57px;
+    }
 }
 
+
+@media screen and (min-width: 800px) {
+    .message .content img{
+        max-width: 50%;
+        max-height: 50%;
+        border-radius: 57px;
+    }
+    
+}
 .message .reply {
     bottom: 12px;
     font-family: 'Inter', sans-serif;
     color: #afafaf;
     font-size: 20px;
     padding-left: 20px;
+}
+
+
+@media screen and (max-width: 800px) {
+    .message .reply img{
+        max-width: 100%;
+        max-height: 100%;
+        border-radius: 57px;
+    }
+}
+
+
+@media screen and (min-width: 800px) {
+    .message .reply img{
+        max-width: 50%;
+        max-height: 50%;
+        border-radius: 57px;
+    }
+    
 }
 
 .message a {
